# uni

./: .gitignore  CLAUDE.md  Cargo.toml  Cargo.toml.old  LICENSE  README.md  RESTRUCTURE_PLAN.md  build-linux  build-stm32h753zi  build.rs  build_linux  build_macos  build_macos_arm  build_microbit  build_pico  build_pico2  build_stm32  build_stm32h753zi  build_windows  design.md  flash-stm32h753zi  flash_microbit  flash_pico  flash_pico2  flash_stm32  flash_stm32h753zi  linux  mb  memory.x  microbit  pico  sum_test.uni
.cargo/: config.toml
examples/: datetime.uni  hello.uni  records.uni  test.uni
src/: builtins.rs  compat.rs  evaluator.rs  integration_tests.rs  interpreter.rs  main.rs  parser.rs  prelude.rs  stdlib.rs  tokenizer.rs  value.rs
src/hardware/: linux.rs  microbit.rs  mod.rs
src/primitives/: abs.rs  bit_and.rs  bit_not.rs  bit_or.rs  bit_xor.rs  ceil.rs  cons.rs  cos.rs  datetime.rs  def.rs  divide.rs  doc.rs  drop.rs  duration.rs  equals.rs  eval.rs  exp.rs  floor.rs  floor_div.rs  greater_equal.rs  greater_than.rs  hardware.rs  head.rs  help.rs  i16_buffer.rs  i16_ops.rs  i16_ref.rs  if_primitive.rs  less_equal.rs  less_than.rs  list.rs  log.rs  max.rs  min.rs  minus.rs  mod.rs  modulo.rs  multiply.rs  not_equal.rs  null.rs  (+23 more)
uni-cli/: Cargo.toml  README.md
uni-cli/src/: main.rs  output_adapter.rs  repl.rs  stdout_output.rs  stm32_output.rs  stm32_rtc.rs
uni-cli/src/hardware/: linux.rs  microbit.rs  pico.rs
uni-core/: Cargo.toml  README.md
uni-core/examples/: simple_calculator.rs
uni-core/src/: builtins.rs  compat.rs  evaluator.rs  interpreter.rs  lib.rs  output.rs  parser.rs  platform.rs  platform_output.rs  prelude.rs  repl.rs  stdout_output.rs  time_source.rs  tokenizer.rs  value.rs
uni-core/src/hardware/: linux.rs  linux_time.rs  microbit.rs  mod.rs  pico2.rs  stm32h753zi.rs
uni-core/src/primitives/: abs.rs  bit_and.rs  bit_not.rs  bit_or.rs  bit_xor.rs  ceil.rs  clear.rs  cons.rs  cos.rs  cr.rs  current_offset.rs  current_timestamp.rs  def.rs  delay.rs  divide.rs  doc.rs  drop.rs  emit.rs  equals.rs  exp.rs  f32_buffer.rs  fetch.rs  floor.rs  floor_div.rs  greater_equal.rs  greater_than.rs  head.rs  help.rs  i16_dsp.rs  i16_set.rs  i32_buffer.rs  less_equal.rs  less_than.rs  list.rs  log.rs  lval.rs  lvar.rs  max.rs  min.rs  minus.rs  (+32 more)
uni-core/tests/: integration_tests.rs
