[package]
name = "uni"
version = "0.0.1"
edition = "2024"

[[bin]]
name = "uni"
path = "src/main.rs"

[dependencies]
editline = { version = "0.0.16", default-features = false }
num-bigint = { version = "0.4", default-features = false }
num-rational = { version = "0.4", default-features = false, features = ["num-bigint"] }
num-complex = { version = "0.4", default-features = false, optional = true }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
chrono = { version = "0.4", optional = true }

[features]
default = ["datetime", "std", "advanced_math", "complex_numbers"]
datetime = ["chrono"]
std = ["editline/std"]
advanced_math = []  # Trig, exp/log, rounding, advanced division
complex_numbers = ["num-complex"]  # Complex and Gaussian integer support

[target.'cfg(target_os = "none")'.dependencies]
editline = { version = "0.0.16", features = ["microbit"], default-features = false }
microbit = { package = "microbit-v2", version = "0.15" }
embedded-hal = "1.0"
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "0.2"
alloc-cortex-m = "0.4"
