[package]
name = "uni-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core interpreter library for the Uni programming language"
repository = "https://github.com/edadma/uni"
readme = "README.md"
keywords = ["interpreter", "stack", "homoiconic", "embedded", "forth"]
categories = ["embedded", "no-std", "parser-implementations"]

[lib]
name = "uni_core"
path = "src/lib.rs"

[dependencies]
# Core numeric types (no_std compatible)
num-bigint = { version = "0.4", default-features = false }
num-rational = { version = "0.4", default-features = false, features = ["num-bigint"] }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }

# Optional features
num-complex = { version = "0.4", default-features = false, optional = true }
editline = { version = "0.0.19", default-features = false, optional = true }
rp235x-hal = { version = "0.3", features = ["rt", "critical-section-impl"], optional = true }

# Platform features
libc = { version = "0.2", optional = true }

# Desktop platform dependencies (not for embedded targets)
[target.'cfg(not(target_os = "none"))'.dependencies]
chrono = "0.4"

# Embedded targets - shared dependencies for all ARM Cortex-M targets
[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dependencies]
embedded-hal = { version = "1.0", optional = true }
cortex-m = { version = "0.7", optional = true }
cortex-m-rt = { version = "0.7", optional = true }

# Hardware-specific dependencies
# micro:bit v2 (nRF52833) - thumbv7em-none-eabihf only
[target.thumbv7em-none-eabihf.dependencies]
microbit = { package = "microbit-v2", version = "0.15", optional = true }

# Raspberry Pi Pico (RP2040) - thumbv6m-none-eabi only (no hardware primitives, REPL only)
[target.thumbv6m-none-eabi.dependencies]
# No HAL dependency needed - Pico has no hardware primitives in uni-core

[features]
default = []
std = ["libc"]  # std enables libc for timezone detection
advanced_math = []  # Trig, exp/log, rounding, advanced division
complex_numbers = ["num-complex"]  # Complex and Gaussian integer support
repl = ["editline"]  # REPL support with line editing (optional)

# Hardware platform features
hardware-microbit = ["microbit", "embedded-hal", "cortex-m", "cortex-m-rt"]
hardware-pico2 = ["rp235x-hal", "embedded-hal", "cortex-m", "cortex-m-rt"]  # Pico 2 (RP2350) GPIO primitives

# Convenience aliases for target features
target-microbit = ["hardware-microbit"]
target-pico = []  # Pico (RP2040) - REPL only, no hardware primitives
target-pico2 = ["hardware-pico2"]
