[package]
name = "uni-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core async interpreter library for the Uni programming language"
repository = "https://github.com/edadma/uni"
readme = "README.md"

[lib]
name = "uni_core"
path = "src/lib.rs"

[dependencies]
# Core numeric types (no_std compatible)
num-bigint = { version = "0.4", default-features = false }
num-rational = { version = "0.4", default-features = false, features = ["num-bigint"] }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }

# Async runtime (Embassy for embedded)
embassy-executor = { version = "0.9.0", optional = true }
embassy-time = { version = "0.5.0", optional = true }
embassy-futures = { version = "0.1.0", optional = true }

# Optional async line editing for REPL
editline = { version = "0.0.21", default-features = false, optional = true }

# Complex numbers (optional, no_std compatible)
num-complex = { version = "0.4", default-features = false, optional = true }

# Datetime support (optional, requires std)
chrono = { version = "0.4", optional = true, default-features = false, features = ["clock"] }

[features]
# Default: async-enabled core without REPL
default = []

# Standard library support (for desktop/Linux builds)
std = ["chrono?/std", "datetime"]

# Advanced math operations
advanced_math = []

# Complex numbers support
complex_numbers = ["num-complex"]

# REPL support (requires editline)
repl = ["editline"]

# Datetime operations (requires std)
datetime = ["chrono", "std"]

# Target-specific features
target-stm32h753zi = ["embassy-executor", "embassy-time", "embassy-futures"]

[dev-dependencies]
tokio = { version = "1.40", features = ["rt", "macros"] }
